--- a/src/components/shared/side-menu/SideMenu.css
+++ b/src/components/shared/side-menu/SideMenu.css
@@ -3,9 +3,9 @@
 
 
 #menu a {
-  @apply w-full px-2 inline-flex space-x-2 items-center border-b border-slate-700 py-3 hover:bg-white/5 transition ease-linear duration-150;
+  @apply px-2 inline-flex space-x-2 items-center border-b border-slate-700 py-3 hover:bg-white/5 transition ease-linear duration-150;
 }
 
 #menu a.active {
-  @apply  bg-blue-800;
+  @apply   dark:bg-blue-800 bg-blue-600 ;
 }
