--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@
   background: #555;
 }
 
+input[type="time"]::-webkit-calendar-picker-indicator{
+  filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
