--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,13 @@ input[type='time']::-webkit-calendar-picker-indicator {
   filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(130deg) brightness(95%) contrast(80%);
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -102,3 +109,4 @@ input[type='time']::-webkit-calendar-picker-indicator {
     transform: rotate(360deg);
   }
 }
+
